Continuamos con cambios. guardo para no perder el trabajo.

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,8 +1,10 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>
-            About
-        </ion-title>
+        <ion-title>LOGGER</ion-title>
+
+        <ion-buttons end>
+            <change-map></change-map>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 
