--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -1,18 +1,14 @@
-<!--
-  Generated template for the Chat page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
+    <ion-navbar>
+        <ion-title>Chat</ion-title>
 
-  <ion-navbar>
-    <ion-title>chat</ion-title>
-  </ion-navbar>
-
+        <ion-buttons end>
+            <change-map></change-map>
+        </ion-buttons>
+    </ion-navbar>
 </ion-header>
 
-
 <ion-content padding>
+    CHAAAAAAAAAAAAAAAAT
 
 </ion-content>
