--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -1,17 +1,13 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>
-            Mapa:
-        </ion-title>
+        <ion-title>Mapa</ion-title>
+
+        <ion-buttons end>
+            <change-map></change-map>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 
 <ion-content>
-    <ion-list>
-        <ion-list-header>Follow us on Twitter</ion-list-header>
-        <ion-item>
-            <ion-icon name="ionic" item-left></ion-icon>
-            @ionicframework
-        </ion-item>
-    </ion-list>
+    <p>Aqui irá el mapa de la room actual1.1</p>
 </ion-content>
